--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hire Professional Freelancer &amp; Web developer. Building Interactive experiences, security"/>
+    <meta name="robots" content="noodp"/>
+    <meta property="og:locals" content="en_US"/>
+    <meta property="og:typr" content="website"/>
+    <meta
+      property="og:title"
+      content="Full Stack developer | React Expert"
+    />
+    <meta 
+      property="og:description"
+      content="Hire Full-stack developer | Python Expert"
+    />
+    <meta
+      property="og:sitename"
+      content="Python, Javascript Expert"
+    />
+    <meta
+      property="og:url"
+      content="https://aryanstha.cf/"
+    />
+
     <title>Aryan Shrestha</title>
   </head>
   <body class="light-theme">
