--- a/index.html
+++ b/index.html
@@ -141,10 +141,14 @@
           </div>
 
           <div class="section-detail-wrapper">
-            <h3 class="section-heading">Gabes</h3>
-            <p class="section-text">This project is in progress but it's about a super colorful village where the entire world including the people are candies. So far the story is that they are set out to explore their "space" only to realize it's a human that will try to destroy them.</p>
-            <h3 class="section-heading">Rebecca's Reddish Radishes</h3>
-            <p class="section-text">Oh what's that? Why, it's a red radish! Oop, another one! In this playful and comedy animation, Rebecca, a young farmer, decided to plant radishes for the first time, but there is a big twist!</p>
+                        <h3 class="section-heading">गवेषणा🔎</h3>
+            <p class="section-text">गवेषणा is an effective bash scripts that speeds up reconnaissance, extracting information, and the discovering of known vulnerabilities. The results are saved in a cohesive manner in folders and in a wide range of formats.
+              <div class="year"><span><a class="section-text" href="https://github.com/Aryanstha/GabesanRecon" >View Project</a></span></div>
+            
+            </p>
+            <h3 class="section-heading">Code Chronicles🚀</h3>
+            <p class="section-text">Code Chronicle is a personal blog site that provides high-quality content on various topics related to technology and coding. The blog is created and maintained by Group of Developers,  who are passionate about sharing knowledge and experiences with others who share similar interests.</p>
+            <div class="year"><span><a class="section-text" href="https://github.com/Aryanstha/Code-Chronicles" >View Project</a></span></div>
             <h3 class="section-heading">Flora</h3>
             <p class="section-text">A heartwarming story about a little orphan girl who tries to find her way back home.</p>
           </div>
