--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
             <h3 class="section-heading">Code Chronicles🚀</h3>
             <p class="section-text">Code Chronicle is a personal blog site that provides high-quality content on various topics related to technology and coding. The blog is created and maintained by Group of Developers,  who are passionate about sharing knowledge and experiences with others who share similar interests.</p>
             <div class="year"><span><a class="section-text" href="https://github.com/Aryanstha/Code-Chronicles" >View Project</a></span></div>
-            <h3 class="section-heading">Flora</h3>
-            <p class="section-text">A heartwarming story about a little orphan girl who tries to find her way back home.</p>
+             <h3 class="section-heading">GoSubSeeker 🔎</h3>
+            <p class="section-text">GoSubSeeker is a command-line tool written in Go programming language that scans a target domain to identify its subdomains. It is designed to be fast, efficient, and easy to use. With GoSubSeeker, you can quickly enumerate subdomains of a given domain, which can be helpful for security researchers and penetration testers.</p>
+            <div class="year"><span><a class="section-text" href="https://github.com/Aryanstha/GoSubSeeker" >View Project</a></span></div>
           </div>
         </section>
 
