--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Hire Professional Freelancer &amp; Web developer. Building Interactive experiences, security"/>
     <meta name="robots" content="noodp"/>
     <meta property="og:locals" content="en_US"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9365874053852589"
+     crossorigin="anonymous"></script>
     <meta property="og:typr" content="website"/>
     <meta
       property="og:title"
